--- a/JS courses/JS Back-End/6-Workshop-MongoDB and Mongoose/demo/src/views/details.hbs
+++ b/JS courses/JS Back-End/6-Workshop-MongoDB and Mongoose/demo/src/views/details.hbs
@@ -1,10 +1,10 @@
 
     <main>
-      <h1>{{name}}</h1>
-      <img class="cube" src="{{imageUrl}}">
+      <h1>{{currCube.name}}</h1>
+      <img class="cube" src="{{currCube.imageUrl}}">
       <div class="details">
-        <p><span>Description:</span> {{description}}</p>
-        <p><span>Difficulty level:</span> {{difficultyLevel}}</p>
+        <p><span>Description:</span> {{currCube.description}}</p>
+        <p><span>Difficulty level:</span> {{currCube.difficultyLevel}}</p>
         <a class="btn" href="/">Back</a>
       </div>
     </main>
