--- a/JS courses/JS Back-End/6-Workshop-MongoDB and Mongoose/demo/src/views/details.hbs
+++ b/JS courses/JS Back-End/6-Workshop-MongoDB and Mongoose/demo/src/views/details.hbs
@@ -6,6 +6,7 @@
         <p><span>Description:</span> {{currCube.description}}</p>
         <p><span>Difficulty level:</span> {{currCube.difficultyLevel}}</p>
         <a class="btn" href="/">Back</a>
+        <a class="btn" href="/cubes/{{currCube._id}}/attach-accessory">Attach</a>
       </div>
       <h2>Accessories</h2>
             <div class="accessories">
