--- a/JS courses/JS Back-End/8-Workshop-Session and Authentication/demo/src/views/cube/details.hbs
+++ b/JS courses/JS Back-End/8-Workshop-Session and Authentication/demo/src/views/cube/details.hbs
@@ -7,6 +7,8 @@
         <p><span>Difficulty level:</span> {{currCube.difficultyLevel}}</p>
         <a class="btn" href="/">Back</a>
         <a class="btn" href="/cubes/{{currCube._id}}/attach-accessory">Attach</a>
+        <a class="btn" href="/cubes/{{currCube._id}}/edit">Edit</a>
+        <a class="btn" href="/cubes/{{currCube._id}}/delete">Delete</a>
       </div>
       <h2>Accessories</h2>
             <div class="accessories">
