--- a/JS courses/JS Back-End/8-Workshop-Session and Authentication/demo/src/views/layouts/main.hbs
+++ b/JS courses/JS Back-End/8-Workshop-Session and Authentication/demo/src/views/layouts/main.hbs
@@ -15,14 +15,22 @@
         <div class='container'>
             <header>
                 <ul>
+
                     <li><img class='logo' src='/images/logo.png' /></li>
                     <li><a href='/'>Browse</a></li>
-                    <li><a href='/cubes/create'>Add a Cube</a></li>
-                    <li><a href='/accessory/create'>Add Accessory</a></li>
                     <li><a href='/about'>About</a></li>
-                    <li><a href="/users/login">Login</a></li>
-                    <li><a href="/users/register">Register</a></li>
-                    <li><a href="/users/logout">Logout</a></li>
+
+                    {{#if isAuthenticated}}
+                        <li><a href='/cubes/create'>Add a Cube</a></li>
+                        <li><a href='/accessory/create'>Add Accessory</a></li>
+                        <li><a href='/users/logout'>Logout</a></li>
+                        <li>{{user.username}}</li>
+
+                    {{else}}
+                        <li><a href='/users/login'>Login</a></li>
+                        <li><a href='/users/register'>Register</a></li>
+                    {{/if}}
+
                 </ul>
             </header>
             {{{body}}}
