--- a/JS courses/JS Back-End/9-Validation and Error Handling/demo/src/views/layouts/main.hbs
+++ b/JS courses/JS Back-End/9-Validation and Error Handling/demo/src/views/layouts/main.hbs
@@ -33,6 +33,12 @@
 
                 </ul>
             </header>
+            {{#each errorMessages}}
+            <div id="notifications">
+                <p id="notification-massage">{{this}}</p>
+            </div>
+            {{/each}}
+
             {{{body}}}
         </div>
         <footer>@Cubicle: Exercise for Express.js and Handlebars</footer>
