--- a/JS courses/JS Back-End/exam-prep/first demo/demo/src/views/layouts/main.hbs
+++ b/JS courses/JS Back-End/exam-prep/first demo/demo/src/views/layouts/main.hbs
@@ -17,10 +17,16 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="#">All Crypto</a></li>
                 <li><a href="#">Search</a></li>
+
+                {{#if isAuthenticated}}
                 <li><a href="#">Create Offer</a></li>
+                <li><a href="/logout">Logout</a></li>
+
+                {{else}}
                 <li><a href="/login">Login</a></li>
                 <li><a href="/register">Register</a></li>
-                <li><a href="/logout">Logout</a></li>
+
+                {{/if}}
             </ul>
         </nav>
     </header>
