--- a/JS courses/JS Back-End/exam-prep/second demo/src/views/crypto/search.hbs
+++ b/JS courses/JS Back-End/exam-prep/second demo/src/views/crypto/search.hbs
@@ -5,16 +5,11 @@
             <h1>Search</h1>
 
             <form class="search-form" method="GET">
-                <input type="text" class="search-coin" name="name" placeholder="Search here...">
-                <select id="payment" name="paymentMethod">
-                    <option value="crypto-wallet">Crypto Wallet</option>
-                    <option value="credit-card">Credit Card</option>
-                    <option value="debit-card">Debit Card</option>
-                    <option value="paypal">PayPal</option>
-                </select>
+                <input type="text" class="search-coin" name="name" value="{{name}}" placeholder="Search here...">
+                {{>payment}}
                 <button type="submit" class="btn-search">Search</button>
             </form>
-
+            {{#if crypto}}
             <div class="search-result">
                 <div class="search-list">
                     {{#each crypto}}
@@ -24,9 +19,10 @@
                 </div>
 
             </div>
-            
-            <!-- <div class="no-match">
+    {{else}}        
+             <div class="no-match">
                 <p>No match was found!</p>
-            </div> -->
+            </div> 
+            {{/if}}
         </section>
     </main>
