--- a/JS courses/JS Back-End/exam-prep/Wizard Creatures Wiki/demo/src/views/blog/details.hbs
+++ b/JS courses/JS Back-End/exam-prep/Wizard Creatures Wiki/demo/src/views/blog/details.hbs
@@ -1,65 +1,79 @@
+<main>
 
+    <section id='details-page'>
 
-        <main>
+        <div class='main_card'>
+            <div class='card_left'>
+                <div class='card_datails'>
 
-            <section id="details-page">
-
-                <div class="main_card">
-                    <div class="card_left">
-                        <div class="card_datails">
-
-                            <h1>Name: Thestral</h1>
-                            <h3>Created by an author: Alex Smith</h3>
-                            <div class="card_character">
-                                <p class="card-species">Species: Beast</p>
-                                <p class="card-skin">Skin colour: Black</p>
-                                <p class="card-eye">Eye Colour: White</p>
-                            </div>
-
-                            <p class="disc">Description: Thestrals are an elusive, carnivorous species of winged horse, visible only to those who have witnessed and embraced a death, and described as having "blank, white, shining eyes," a "dragonish face," "long, black manes," "great leathery wings," and the "skeletal body of a great, black, winged horse"; also described by Hagrid as "dead clever an' useful", and also by Harry as "reptilian".</p>
-
-                            <!-- If there is no registered user, do not display buttons-->
-                            <div class="social-btn">
-                                <!-- Only for registered user and author of the post -->
-                                <a href="#" class="edit-btn">Edit</a>
-                                <a href="#" class="del-btn">Delete</a>
-                                <!-- logged in users, who have not yet voted-->
-                                <a href="#" class="vote-up">Vote</a>
-
-                                <!-- logged in user who has already voted-->
-                                <p class="thanks-for-vote">Thanks For Voting</p>
-
-                            </div>
-                        </div>
+                    <h1>Name: {{post.name}}</h1>
+                    <h3>Created by an author:
+                        {{post.owner.firstName}}
+                        {{post.owner.lastName}}</h3>
+                    <div class='card_character'>
+                        <p class='card-species'>Species: {{post.species}}</p>
+                        <p class='card-skin'>Skin colour: {{post.skin}}</p>
+                        <p class='card-eye'>Eye Colour: {{post.eye}}</p>
                     </div>
-                    <div class="card_right">
-                        <img src="/static/img/Thestral.jpeg"
-                            alt="image">
-                    </div>
-                </div>
 
-            </section>
+                    <p class='disc'>{{post.description}}</p>
 
-            <section id="votes">
-                <div class="vote-info">
-                    <div class="card_left">
-                        <div class="card_datails">
-                            <h1>Votes</h1>
-                            <div class="card_vote">
-                                <!-- Show the rating of votes, if there are no votes yet, the number must be 0. -->
-                                <p class="PV">Total rating of votes: 0</p>
-                            </div>
-                            <!-- If there are already people who have cast their vote for the post, separate their emails with a comma and a space ", " -->
-                            <!-- <p class="disc">People who voted for the post - alex@gmai.com, petar@gmail.com, petq@gmail.com</p>-->
-
-                            <!-- If not display: -->
-                            <p class="disc">People who voted for the post - No one has voted yet.</p>
-                        </div>
+                    <div class='social-btn'>
+                        {{#if isOwner}}
+                            <a
+                                href='/post/{{post._id}}/edit'
+                                class='edit-btn'
+                            >Edit</a>
+                            <a
+                                href='/post/{{post._id}}/delete'
+                                class='del-btn'
+                            >Delete</a>
+                        {{/if}}
+                        {{#if isAuthenticated}}
+                            {{#unless hasVoted}}
+                                {{#unless isOwner}}
+                                    <a
+                                        href='/post/{{post._id}}/vote'
+                                        class='vote-up'
+                                    >Vote</a>
+                                {{/unless}}
+                            {{/unless}}
+                        {{/if}}
+                        {{#if hasVoted}}
+                            {{#unless isOwner}}
+                                {{#unless isAuthenticated}}
+                                    <p class='thanks-for-vote'>Thanks For Voting</p>
+                                {{/unless}}
+                            {{/unless}}
+                        {{/if}}
                     </div>
                 </div>
-            </section>
+            </div>
+            <div class='card_right'>
+                <img src='{{post.image}}' alt='image' />
+            </div>
+        </div>
 
-        </main>
+    </section>
 
+    <section id='votes'>
+        <div class='vote-info'>
+            <div class='card_left'>
+                <div class='card_datails'>
+                    <h1>Votes</h1>
+                    <div class='card_vote'>
+                       <p class="PV">Total rating of votes: {{numberOfVotes}}</p>
+                    </div>
+                    {{#if hasVotes}}
+                    <p class="disc">People who voted for the post - {{voters}}</p>
 
-   
+                    <!-- If not display: -->
+                    {{else}}
+                    <p class="disc">People who voted for the post - No one has voted yet.</p>
+                    {{/if}}
+                </div>
+            </div>
+        </div>
+    </section>
+
+</main>
