--- a/ReactJS/ReactJS-Project/client/src/components/Login/Login.module.css
+++ b/ReactJS/ReactJS-Project/client/src/components/Login/Login.module.css
@@ -4,13 +4,15 @@
   width: 360px;
   padding: 8% 0 0;
   margin: auto;
+
 }
 .form {
+
   position: relative;
   z-index: 1;
-  background: #FFFFFF;
+  background: grey;
   max-width: 360px;
-  margin: 0 auto 100px;
+  margin: 100px  auto 100px;
   padding: 45px;
   text-align: center;
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
@@ -30,7 +32,7 @@
   font-family: "Roboto", sans-serif;
   text-transform: uppercase;
   outline: 0;
-  background: #4CAF50;
+  background: #ff214f;
   width: 100%;
   border: 0;
   padding: 15px;
@@ -49,13 +51,14 @@
   font-size: 12px;
 }
 .form .message a {
-  color: #4CAF50;
+  color: #ff214f;
   text-decoration: none;
 }
 .form .register-form {
   display: none;
 }
 .container {
+
   position: relative;
   z-index: 1;
   max-width: 300px;
@@ -88,10 +91,16 @@
 .container .info span .fa {
   color: #EF3B3A;
 }
-/* body */
-  /* background: #76b852;  */
-  /* background: rgb(141,194,111); */
-  /* background: linear-gradient(90deg, rgba(141,194,111,1) 0%, rgba(118,184,82,1) 50%); */
-  /* font-family: "Roboto", sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;       */
+
+.headerLogin{
+  height: 100vh;
+  max-height: 900px;
+  background: url("../../../public/imgs/BIG_SMOKE_120320_063.jpg") no-repeat center center fixed;
+  background-size: cover;
+  min-height: 750px;
+}
+  
+
+
+
+  
