adding some error check for register component

--- a/ReactJS/ReactJS-Project/client/src/components/Register/Register.module.css
+++ b/ReactJS/ReactJS-Project/client/src/components/Register/Register.module.css
@@ -100,6 +100,18 @@
   min-height: 750px;
 }
   
+.inputFields {
+  margin-left: 10px;
+  margin-bottom: 10px;
+}
+
+
+
+.errorMessage {
+color:red;
+font: 0.5 em;
+margin: 0 0 10px
+}
 
 
 
