--- a/ReactJS/ReactJS-Project/client/public/css/foodhut.css
+++ b/ReactJS/ReactJS-Project/client/public/css/foodhut.css
@@ -7033,6 +7033,7 @@ a.close.disabled {
   opacity: 1;
 }
 
+
 .carousel-caption {
   position: absolute;
   right: 15%;
@@ -11344,6 +11345,7 @@ pre {
 
 .gallary .gallary-item .gallary-img {
   width: 100%;
+  height: 100%;
 }
 
 .gallary .gallary-item .gallary-overlay {
