--- a/ReactJS/ReactJS-Project/client/src/components/Login/Login.module.css
+++ b/ReactJS/ReactJS-Project/client/src/components/Login/Login.module.css
@@ -7,7 +7,6 @@
 
 }
 .form {
-
   position: relative;
   z-index: 1;
   background: grey;
@@ -18,6 +17,8 @@
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 }
 .form input {
+  /* text-rendering: unset; */
+  
   font-family: "Roboto", sans-serif;
   outline: 0;
   background: #f2f2f2;
