--- a/ReactJS/ReactJS-Project/client/src/components/Spinner.module.css
+++ b/ReactJS/ReactJS-Project/client/src/components/Spinner.module.css
@@ -1,4 +1,4 @@
-.spinner {
+/* .spinner {
   position: absolute;
   top: calc(50% - 32px);
   left: calc(50% - 32px);
@@ -22,4 +22,4 @@
   100% {
     transform: rotate(360deg);
   }
-}
+} */
