--- a/ReactJS/ReactJS-Project/client/src/components/Footer/Footer.module.css
+++ b/ReactJS/ReactJS-Project/client/src/components/Footer/Footer.module.css
@@ -1,16 +1,16 @@
 .footerSection {
-    padding-top: 10px;
-    padding-bottom: 10px;
-    margin-top: 10px;
-    border-top: 1px solid grey;
-    background-color: grey;
-    flex: auto;
-    bottom: 0; 
-    left: 0; 
-    z-index: 10;
-     /* margin-top: 20px; */
+  padding-top: 20px;
+  padding-bottom: 10px;
+  margin-top: 20px;
+  border-top: 1px solid grey;
+  background-color: grey;
+  text-align: center;
   }
   .footerSection>p{
-    text-align: center;
-    font-size: 15px;
+    color: white;
   }
+  .footerDiv{
+    /* position: fixed; */
+    margin-top: 180px;
+  }
+  
