adding more error handler on login/register/create

--- a/ReactJS/ReactJS-Project/client/src/components/Recipes/RecipeEdit/RecipeEdit.module.css
+++ b/ReactJS/ReactJS-Project/client/src/components/Recipes/RecipeEdit/RecipeEdit.module.css
@@ -99,6 +99,11 @@
   background-size: cover;
   min-height: 750px;
 }
+.errorMessage {
+  color:red;
+  font: 0.5 em;
+  margin: 0 0 10px
+  }
   
 
 
