--- a/ReactJS/ReactJS-Project/client/src/components/Recipes/RecipeDetails/RecipeDetails.module.css
+++ b/ReactJS/ReactJS-Project/client/src/components/Recipes/RecipeDetails/RecipeDetails.module.css
@@ -12,3 +12,7 @@
     text-transform:uppercase;
     text-align: center;
 }
+.ingredientsList{
+    list-style-type: none;
+    padding-left: 20px;
+}
