--- a/ReactJS/ReactJS-Project/client/src/components/Recipes/AddRecipe/AddRecipe.module.css
+++ b/ReactJS/ReactJS-Project/client/src/components/Recipes/AddRecipe/AddRecipe.module.css
@@ -106,6 +106,18 @@
   margin: 0 0 10px
   }
 
+  .form textarea {
+    font-family: "Roboto", sans-serif;
+    outline: 0;
+    background: #f2f2f2;
+    width: 100%;
+    border: 0;
+    margin: 0 0 15px;
+    padding: 15px;
+    font-size: 14px;
+    box-sizing: border-box;
+  } 
+
 
 
   
