--- a/ReactJS/ReactJS-Project/client/src/components/Recipes/RecipeEdit/RecipeEdit.module.css
+++ b/ReactJS/ReactJS-Project/client/src/components/Recipes/RecipeEdit/RecipeEdit.module.css
@@ -28,6 +28,18 @@
   box-sizing: border-box;
   font-size: 14px;
 }
+.form textarea {
+  font-family: "Roboto", sans-serif;
+  outline: 0;
+  background: #f2f2f2;
+  width: 100%;
+  border: 0;
+  margin: 0 0 15px;
+  padding: 15px;
+  font-size: 14px;
+  box-sizing: border-box;
+}
+
 .form button {
   font-family: "Roboto", sans-serif;
   text-transform: uppercase;
