--- a/HTML+CSS/Retake_Exam/01.OurService_Resources/style.css
+++ b/HTML+CSS/Retake_Exam/01.OurService_Resources/style.css
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap');
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css');
 
-* {
+/* * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-}
+} */
 
 html {
     font: 14px/1.5 'Lora', sans-serif;
